# meteo_station

./: .gitignore  README.md
hardware/: essai_station_meteo-cache.lib  essai_station_meteo.kicad_pcb  essai_station_meteo.net  essai_station_meteo.pro  essai_station_meteo.sch
src/: CMakeLists.txt  coverage.sh  sdkconfig  upload.sh
src/main/: CMakeLists.txt  anemometer.c  anemometer.h  button.c  button.h  ctrl.c  ctrl.h  data_defs.c  data_defs.h  data_ope.c  data_ope.h  data_ope_config.c  data_ope_config.h  filelog.c  filelog.h  histogram.c  histogram.h  libs.c  libs.h  log.c  main.c  main_test.c  menu.c  menu.h  menu_date_time.c  menu_date_time.h  nvstorage.c  nvstorage.h  rainmeter.c  rainmeter.h  screen.c  screen.h  src.c  variant.h  winddir.c  winddir.h  zb.c  zb.h  zb_data.h  zigbee.c  (+1 more)
src/main/ble/: ble.c  ble_date_srv.c  ble_date_srv.h  ble_env_srv.c  ble_env_srv.h  ble_gatt_svr.c  ble_gatt_svr.h  bt_uuid.h
src/main/drivers/: analog.c  i2c.c  io.c  pcf_8523.c  sd_card.c  ser_lcd.c
src/main/gui/: menu.c  menu.h  menu_config.c  menu_config.h  menu_date_time.c  menu_date_time.h  menu_histogram.c  menu_histogram.h  screen.c  screen.h
src/main/include/: atomic.h  ble.h  common.h  config.h  log.h  os.h
src/main/include/drivers/: analog.h  i2c.h  io.h  pcf_8523.h  sd_card.h  ser_lcd.h
src/main/include/os/: os.h
src/main/tu/: tu_data_fix_period.c  tu_data_ope.c
